--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,7 @@
         <dependency>
             <groupId>com.microsoft.sqlserver</groupId>
             <artifactId>mssql-jdbc</artifactId>
+            <version>5.1.30</version>
         </dependency>
     </dependencies>
 </project>
